# NewsLetterAPI

./: Cargo.toml  Dockerfile  README.md  configuration.yaml
configuration/: base.yaml  local.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscription.rs
tests/: health_checker.rs
