[package]
name = "NewsLetterAPI"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "NewsLetterAPI"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
chrono = {verison = "0.4.38", default-features = false, features = ["clock"] }
uuid = { version = "1.11.0", features = ["v4"] }
config = "0.13.4"
env_logger = "0.9.3"
log = "0.4"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8.1"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]

[dev-dependencies]
reqwest = "0.12"
